# dmify-app

./: pyproject.toml  run_backend.py
backend/: auth.py  database.py  email_service.py  export_service.py  main.py  payment_service.py  scraper_algos.py
backend/routes/: auth.py  payments.py  projects.py  scraping.py
frontend/: index.html  package-lock.json  package.json  render.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  SEOHead.tsx
frontend/src/contexts/: AuthContext.tsx  UIContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  ForgotPassword.tsx  Goodbye.tsx  Landing.tsx  Login.tsx  Messages.tsx  PaymentSuccess.tsx  Payments.tsx  PricingPublic.tsx  PrivacyPolicy.tsx  ProjectDetail.tsx  Projects.tsx  ResetPassword.tsx  Signup.tsx  TermsOfService.tsx  VerifyEmail.tsx
